Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.0.2
-
Fix Version/s: 5.5.0 Beta
-
Component/s: Core: Plugins
-
Labels:
-
Environment:Windows 7 with Xming installed and X forwarding enabled in Putty + Ubuntu 12.04 64-bit
-
Commits:ebdf9916600f0b0cd4d25b538d1fd0fef6e89077
Description
This issue can be reproduced only if launching applications remotely.
Steps to reproduce
1. Install Putty and Xming on the Windows 7 machine.
2. Launch Xming
3. Launch Putty (from "ssh", check "enable X forwarding")
4. Connect to the Ubuntu 12.04 machine
5. Launch e.g Qt Designer or any other Qt application e.g. analogclock
Expected outcome:
No warnings or errors are shown
Actual outcome:
These warnings are shown:
QXcbConnection: Failed to get the primary output of the screen
QXcbConnection: XCB error: 170 (Unknown), sequence: 147, resource id: 90, major
code: 146 (Unknown), minor code: 20
QXcbConnection: Failed to get the primary output of the screen
QXcbConnection: XCB error: 170 (Unknown), sequence: 230, resource id: 8388614,
major code: 146 (Unknown), minor code: 20
Attachments
Issue Links
- is duplicated by
-
QTBUG-45081 Crashes when swapping screens
-
- Closed
-
-
QTBUG-45025 [Reg] QXcbConnection:: no screens available
-
- Closed
-
- is required for
-
QTBUG-39695 deal better with dynamic screen adding/removal, including the "no screen" case
-
- Open
-
- relates to
-
QTBUG-38326 Qt Creator window disappears when plugging out second monitor
-
- Closed
-
-
QTBUG-31354 XCB: QApplication crashes when there is no monitor connected using QT5
-
- Closed
-
-
QTBUG-32973 Windows disappear when X monitor is disconnected
-
- Closed
-
-
QTCREATORBUG-11173 Crashes when using through X11 forwarding
-
- Open
-
-
QTBUG-42985 Qt GUI application disappear or crash when no screens are available
-
- Closed
-